Add app owners rewards stats and favorites
